# PapersGPT

./: .env.sample  .tmux_manager.sh  README.md  papers-gpt.service  pyproject.toml
src/: main.py
